--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-       android:theme="@style/Theme.Base.AppCompat.Light" >
+       android:theme="@style/Theme.Base.AppCompat.Light" android:name="RTApplication">
         <activity
             android:name="ru.rgups.time.MainActivity"
             android:label="@string/app_name" >
