--- a/project.properties
+++ b/project.properties
@@ -13,5 +13,4 @@
 # Project target.
 target=android-18
 android.library.reference.1=..\\..\\..\\..\\..\\adt-bundle\\sdk\\extras\\android\\support\\v7\\appcompat
-android.library.reference.2=..\\..\\..\\..\\..\\Users\\ARTOYM\\workspace\\StickyHeaderProject
-android.library.reference.3=../../../../../Users/ARTOYM/workspace/HorizontalVariableListView/library
+android.library.reference.2=..\\..\\..\\..\\..\\Users\\ARTOYM\\workspace\\HorizontalVariableListView\\library
