--- a/project.properties
+++ b/project.properties
@@ -11,6 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-18
-android.library.reference.1=..\\..\\..\\..\\..\\adt-bundle\\sdk\\extras\\android\\support\\v7\\appcompat
-android.library.reference.2=..\\..\\..\\..\\..\\Users\\ARTOYM\\workspace\\HorizontalVariableListView\\library
+target=android-19
+android.library.reference.1=../../../../../Applications/adt-bundle/sdk/extras/android/support/v7/appcompat
+android.library.reference.2=../HorizontalVariableListView/library
