notification manager and staff

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,6 +35,13 @@
             
         </activity>
         
+        <receiver android:name="ru.rgups.time.receiver.HomeWorkNotificationReceiver">
+            <intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />            </intent-filter>
+        </receiver>
+        
     </application>
 
 </manifest>
