--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -20,6 +20,7 @@
        	android:theme="@style/Theme.Base.AppCompat.Light" android:name="RTApplication">
         <activity
             android:name="ru.rgups.time.MainActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +28,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".fragments.WelcomeActivity"></activity><service android:name=".spice.SampleSpiceService"></service>
+        <activity android:name=".fragments.WelcomeActivity"></activity>
+        <service android:name=".spice.SampleSpiceService"></service>
         <activity android:name=".activities.AuthActivity"></activity>
         <activity 
             android:name=".activities.HomeWorkActivity"
