--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,6 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../../../../adt-bundle/sdk/extras/android/support/v7/appcompat
+android.library.reference.1=..\\..\\..\\..\\..\\adt-bundle\\sdk\\extras\\android\\support\\v7\\appcompat
+android.library.reference.3=../../../../../Users/ARTOYM/workspace/StickyListHeaders/library
+android.library.reference.2=../../../../../Users/ARTOYM/workspace/HorizontalVariableListView/library
