--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="0.4" >
 
     <uses-sdk
-        android:minSdkVersion="9"
+        android:minSdkVersion="14"
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -30,7 +30,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".fragments.WelcomeActivity"
-            android:theme="@android:style/Theme.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar"></activity>
         <service android:name=".spice.SampleSpiceService"></service>
         <activity android:name=".activities.AuthActivity"></activity>
         <activity 
