--- a/project.properties
+++ b/project.properties
@@ -12,6 +12,8 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=..\\..\\..\\..\\..\\adt-bundle\\sdk\\extras\\android\\support\\v7\\appcompat
-android.library.reference.3=../../../../../Users/ARTOYM/workspace/StickyListHeaders/library
-android.library.reference.2=..\\..\\..\\..\\..\\Users\\ARTOYM\\workspace\\HorizontalVariableListView\\library
+android.library.reference.1=..\\..\\..\\..\\..\\Users\\ARTOYM\\workspace\\HorizontalVariableListView\\library
+android.library.reference.2=..\\..\\..\\..\\..\\Users\\ARTOYM\\workspace\\StickyListHeaders\\library
+android.library.reference.3=..\\..\\..\\..\\..\\adt-bundle\\sdk\\extras\\android\\support\\v7\\appcompat
+android.library.reference.4=..\\..\\..\\..\\..\\Users\\ARTOYM\\workspace\\android-menudrawer\\menudrawer
+android.library.reference.5=../../../../../Users/ARTOYM/workspace/Crouton/library/src/main
