--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,8 @@
         <activity
             android:name="ru.rgups.time.MainActivity"
             android:configChanges="orientation|keyboardHidden"
+            android:theme="@style/AppBaseTheme"
+            
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
