--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,8 @@ android {
         exclude 'META-INF/license.txt'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/services/com.fasterxml.jackson.core.JsonFactory'
+        exclude 'META-INF/services/com.fasterxml.jackson.core.ObjectCodec'
         exclude 'META-INF/ASL2.0'
     }
 
@@ -46,19 +48,8 @@ dependencies {
     compile 'it.sephiroth.android.library.horizontallistview:library:+'
     compile 'se.emilsjolander:stickylistheaders:2.2.0'
 
-    compile files('libs/android-async-http-1.4.3.jar')
-    compile files('libs/commons-io-1.3.2.jar')
-    compile files('libs/commons-lang3-3.1.jar')
-    compile files('libs/crashlytics.jar')
-    compile files('libs/ormlite-android-4.46.jar')
-    compile files('libs/ormlite-core-4.46.jar')
-    compile files('libs/robospice-1.4.6.jar')
-    compile files('libs/robospice-cache-1.4.6.jar')
-    compile files('libs/robospice-ormlite-1.4.6.jar')
-    compile files('libs/robospice-spring-android-1.4.6.jar')
-    compile files('libs/simple-xml-2.7.1.jar')
-    compile files('libs/spring-android-core-1.0.1.RELEASE.jar')
-    compile files('libs/spring-android-rest-template-1.0.1.RELEASE.jar')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+
 
     compile('de.keyboardsurfer.android.widget:crouton:1.8.4:@aar') {
         // exclusion is not neccessary, but generally a good idea.
