--- a/app/src/main/assets/crashlytics-build.properties
+++ b/app/src/main/assets/crashlytics-build.properties
@@ -3,9 +3,9 @@
 #
 #Do NOT modify, delete, or commit to source control!
 #
-#Sat Jun 14 13:00:44 GMT+04:00 2014
+#Sat Aug 09 11:38:21 MSK 2014
 version_name=0.4
 package_name=ru.rgups.time
-build_id=6a01cb95-b554-477d-a7c7-fcb5be9ba7c1
+build_id=3126ab9c-d2c7-4f20-82b3-aef82771c079
 version_code=4
 app_name=\u0420\u0430\u0441\u043F\u0438\u0441\u0430\u043D\u0438\u0435 \u0420\u0413\u0423\u041F\u0421
