--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'android'
 android {
     compileSdkVersion 19
     buildToolsVersion "20.0.0"
+    aaptOptions.useAaptPngCruncher = true // Bug fix: return to old PNG processor
 
     buildscript {
         repositories {
@@ -46,7 +47,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile 'net.simonvt.menudrawer:menudrawer:3.0.6'
     compile 'it.sephiroth.android.library.horizontallistview:library:+'
-    compile 'se.emilsjolander:stickylistheaders:2.2.0'
+    compile 'se.emilsjolander:stickylistheaders:+'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
