--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'net.simonvt.menudrawer:menudrawer:3.0.6'
     compile 'it.sephiroth.android.library.horizontallistview:library:+'
     compile 'se.emilsjolander:stickylistheaders:+'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
