--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'it.sephiroth.android.library.horizontallistview:library:+'
     compile 'se.emilsjolander:stickylistheaders:+'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
