--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:name="ru.rgups.time.MainActivity"
             android:configChanges="orientation|keyboardHidden"
             android:theme="@style/AppBaseTheme"
-            
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,7 +42,8 @@
         LessonNotificationService
         
         <activity android:name=".activities.AuthActivity"
-                  android:screenOrientation="portrait">
+            android:theme="@style/AppBaseTheme"
+            android:screenOrientation="portrait">
             
         </activity>
         
@@ -50,6 +51,7 @@
         <activity 
             android:name=".activities.HomeWorkActivity"
             android:theme="@style/AppBaseTheme"
+            android:screenOrientation="portrait"
             android:uiOptions="splitActionBarWhenNarrow">
             
         </activity>
@@ -63,7 +65,7 @@
 
     <activity android:name=".activities.PhotoFullScreenActivity"
         android:theme="@style/AppBaseTheme"
-
+        android:screenOrientation="portrait"
         ></activity>
     
     
