--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     	android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-       	android:theme="@style/Theme.Base.AppCompat.Light"
+       	android:theme="@style/AppBaseTheme"
     	android:name="RTApplication">
         <activity
             android:name="ru.rgups.time.MainActivity"
