--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'io.realm:realm-android:0.76.0'
+
 
     compile('de.keyboardsurfer.android.widget:crouton:1.8.4:@aar') {
         // exclusion is not neccessary, but generally a good idea.
