--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'io.realm:realm-android:0.76.0'
-
+    compile 'com.google.code.gson:gson:2.3.1'
 
     compile('de.keyboardsurfer.android.widget:crouton:1.8.4:@aar') {
         // exclusion is not neccessary, but generally a good idea.
